AC_INIT([harmony], [0.0.1], [brian@troutwine.us])
AC_PREREQ([2.64])

AC_COPYRIGHT([Copyright (c) 2010 Brian L. Troutwine])
AM_INIT_AUTOMAKE

AC_ERLANG_NEED_ERLC
AC_PREFIX_PROGRAM(erl)

AC_ERLANG_SUBST_ROOT_DIR
AC_ERLANG_SUBST_ERTS_VER
AC_ERLANG_SUBST_LIB_DIR
AC_ERLANG_CHECK_LIB([kernel])
AC_ERLANG_CHECK_LIB([stdlib])
AC_ERLANG_CHECK_LIB([eunit])
AC_ERLANG_CHECK_LIB([mnesia])
AC_ERLANG_CHECK_LIB([sasl])
AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR([harmony], [0.0.1])

AC_CONFIG_FILES([Makefile src/harmony.app src/harmony.rel src/Makefile])
AC_OUTPUT
